@@ -6,7 +6,7 @@
     <li><%=l(:label_registered_on)%>: <%= format_date(@user.created_on) %></li>
 <% for custom_value in @custom_values %>
 <% if !custom_value.value.empty? %>
-    <li><%= custom_value.custom_field.name%>: <%= show_value(custom_value) %></li>
+    <li><%= custom_value.custom_field.name%>: <%=h show_value(custom_value) %></li>
 <% end %>
 <% end %>
 </ul>
