@@ -60,7 +60,7 @@ end %>
   <%= submit_tag l(:button_change) %>
   <%= end_form_tag %>
 <% end %>
-
+&nbsp;
 </div>
 
 <div id="history" class="box">
